--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   "dependencies": {},
   "devDependencies": {
     "eslint": "^4.7.2",
-    "mocha": "^3.5.3"
+    "mocha": "^3.5.3",
+    "request": "^2.82.0"
   }
 }
