--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "An easy to use node server meant for rapid prototyping ",
   "main": "index.js",
   "scripts": {
-    "docs": "node_modules/jsdoc/jsdoc.js ./src/*.js README.md && mv out docs",
+    "docs": "rm -rf ./docs && node_modules/jsdoc/jsdoc.js ./src/*.js README.md && mv ./out ./docs",
     "start": "node example.js",
     "test": "mocha"
   },
