--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "docs": "rm -rf ./docs && node_modules/jsdoc/jsdoc.js ./src/*.js README.md && mv ./out ./docs",
     "start": "node example.js",
-    "test": "node_modules/mocha/bin/mocha './test/**/*.js'"
+    "test": "npx mocha './test/**/*.js'"
   },
   "repository": {
     "type": "git",
@@ -29,9 +29,9 @@
     "ws": "^3.3.2"
   },
   "devDependencies": {
-    "eslint": "^4.7.2",
+    "eslint": "^8.8.0",
     "jsdoc": "^3.5.5",
-    "mocha": "^3.5.3",
+    "mocha": "^9.2.0",
     "request": "^2.82.0"
   }
 }
