--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
   "name": "nodeblues",
-  "version": "1.3.2",
+  "version": "1.4.0",
   "description": "An easy to use node server meant for rapid prototyping ",
   "main": "index.js",
   "scripts": {
-    "docs": "rm -rf ./docs && node_modules/jsdoc/jsdoc.js ./src/*.js README.md && mv ./out ./docs",
+    "docs": "npx jsdoc ./src/CookieJar.js ./src/Database.js ./src/Router.js ./src/Server.js README.md -d ./docs",
     "start": "node example.js",
-    "test": "node_modules/mocha/bin/mocha './test/**/*.js'"
+    "test": "npx mocha './test/**/*.js'"
   },
   "repository": {
     "type": "git",
@@ -24,14 +24,11 @@
     "url": "https://github.com/iamdudeman/NodeBlues/issues"
   },
   "homepage": "https://github.com/iamdudeman/NodeBlues#readme",
-  "dependencies": {
-    "on-build-webpack": "^0.1.0",
-    "ws": "^3.3.2"
-  },
+  "dependencies": {},
   "devDependencies": {
-    "eslint": "^4.7.2",
+    "eslint": "^8.8.0",
     "jsdoc": "^3.5.5",
-    "mocha": "^3.5.3",
+    "mocha": "^9.2.0",
     "request": "^2.82.0"
   }
 }
